# Water-Governance-Regimes

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  pyproject.toml  requirements.txt
config/: config.yaml
config/db/: dataset.yaml
config/lang/: language.yaml
config/style/: style.yaml
data/: GDP.xlsx  policy.xlsx  province_merged.csv  river break.xlsx  saving_water.xlsx  synth_repeat_predictions.csv  ~$Zhou et al_2020_PNAS_dataset.xlsx
data/ch_basins_WGS1984/: Changjiang_WGS1984.dbf  Changjiang_WGS1984.sbn  Changjiang_WGS1984.sbx  Changjiang_WGS1984.shp  Changjiang_WGS1984.shp.xml  Changjiang_WGS1984.shx  Haihe_WGS1984.dbf  Haihe_WGS1984.sbn  Haihe_WGS1984.sbx  Haihe_WGS1984.shp  Haihe_WGS1984.shp.xml  Haihe_WGS1984.shx  Huaihe_WGS1984.dbf  Huaihe_WGS1984.sbn  Huaihe_WGS1984.sbx  Huaihe_WGS1984.shp  Huaihe_WGS1984.shp.xml  Huaihe_WGS1984.shx  Huanghe_WGS1984.dbf  Huanghe_WGS1984.sbn  Huanghe_WGS1984.sbx  Huanghe_WGS1984.shp  Huanghe_WGS1984.shp.xml  Huanghe_WGS1984.shx  Liaohe_WGS1984.dbf  Liaohe_WGS1984.sbn  (+29 more)
drafts/: governance_drafts.md
notebooks/: allocation.ipynb  appendix.ipynb  correlations.ipynb  data_processing.ipynb  explore_water_use.ipynb  indicators.ipynb  inflexible_water.ipynb  other_changepoints_detections.ipynb  priority.ipynb  recent_decade.ipynb  regime_shift_causes.ipynb  reservoirs_processing.ipynb  runoff_data.ipynb  scarcity.ipynb  water_conveyance.ipynb  water_regime_index.ipynb  合成控制法探索资源利用陷阱.ipynb  数据预处理.ipynb  流域综合耦合指数终版.ipynb
paper/: agutexSI2019.cls  manuscript-v-5.2.0.docx  metadata.tex  metadata.yaml  mybib.bib  mybibtex.bib  others.bib  v-8.2.1.bib  v-8.2.2.bib  v-8.2.3.bib
regimes_yrb/: allocation.py  index.py  plot.py  priority.py  scarcity.py
schemes/: explore_groundwater_use.ipynb  rep.r  saving_water.ipynb  加载Zhou数据并分区.ipynb  合成控制法探索资源利用陷阱.ipynb  测试分上中下三区.ipynb  清洗水库数据.ipynb  稳态转换的原因分析.ipynb  经济动因的驱动.ipynb  附录图制作.ipynb
script/: region_differences.py
scripts/: formula_script.R
tex/: README_tex.md  cover_letter_PNAS.md
tools/: gdp_processing.py  get_water_resource.py  processing.py  region_differences.py  statistic.py  values.py
(+141 files in other folders)
