[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | __pycache__
  | build
  | dist
)/
'''


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "$version"
[semantic_release]
version_variable = 3.8 # or where your version is defined
# repository_user_var = TWINE_USERNAME
# repository_pass_var = TWINE_PASSWORD

[tool.poetry]
name = "regimes-yrb"
version = "0.1.0"
description = ""
authors = ["Shuang Song <songshgeo@gmail.com>"]
readme = "README.md"
packages = [{include = "regimes_yrb"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
