[tool.black]
line-length = 89
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | __pycache__
  | build
  | dist
)/
'''


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "$version"
[semantic_release]
version_variable = 3.8 # or where your version is defined
# repository_user_var = TWINE_USERNAME
# repository_pass_var = TWINE_PASSWORD

[tool.poetry]
name = "regimes-yrb"
version = "0.1.0"
description = ""
authors = ["Shuang Song <songshgeo@gmail.com>"]
readme = "README.md"
packages = [{include = "regimes_yrb"}]

[tool.poetry.dependencies]
python = ">3.8.1,<3.12"
hydra-core = "^1.3.2"
mksci-font = "^0.1.3"
pandas = "^1.5.3"
openpyxl = "^3.1.2"
seaborn = "^0.12.2"
dbfread = "^2.0.7"
scipy = "^1.10.1"
python-ternary = "^1.0.8"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
allure-pytest = "^2.13.1"
ipykernel = "^6.22.0"
jupyterlab = "^3.6.2"
jupyterlab-execute-time = "^2.3.1"
jupyterlab-lsp = "^4.0.1"
python-lsp-server = "^1.7.1"
flake8 = "^6.0.0"
isort = "^5.12.0"
nbstripout = "^0.6.1"
pydocstyle = "^6.3.0"
pre-commit-hooks = "^4.4.0"
sourcery = "^1.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
